# rules_go_write_protos

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  go.mod  go.sum
.agents/: AGENTS.md
.bcr/: metadata.template.json  source.template.json
.github/workflows/: ci.yml  release.yml  semantic-pr.yml
docs/: BUILD.bazel  defs.md  other-languages.md
docs/design/: output-locations.md
pkg/foo/: BUILD.bazel  foo.pb.go  foo.proto
rules/: BUILD.bazel  defs.bzl
tests/bootstrap_test/: MODULE.bazel  run.sh
tests/bootstrap_test/pkg/bootstrap/: BUILD.bazel  bootstrap.proto
tests/external_proto_dep/: MODULE.bazel
tests/external_proto_dep/pkg/bar/: BUILD.bazel  bar.proto
tests/integration_test/: MODULE.bazel  bazel-bin  bazel-integration_test  bazel-out  bazel-testlogs
tests/integration_test/pkg/foo/: BUILD.bazel  foo.proto
tests/multi_workspace_test/: MODULE.bazel  run_custom_locations_test.sh
tests/multi_workspace_test/pkg/foo/: BUILD.bazel
tests/multi_workspace_test/pkg/foo/custom_out/: foo.pb.go
tools/copy_generated_proto_sources/: BUILD.bazel  main.go
