load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_go_write_protos//rules:defs.bzl", "write_go_proto_srcs")

proto_library(
    name = "bootstrap_proto",
    srcs = ["bootstrap.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "bootstrap_go_proto",
    importpath = "github.com/meta-programming/rules_go_write_protos/tests/bootstrap_test/pkg/bootstrap",
    proto = ":bootstrap_proto",
    visibility = ["//visibility:public"],
)

write_go_proto_srcs(
    name = "update_protos",
    srcs = [":bootstrap_go_proto"],
)
